--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
   ext.kotlin_version = '1.3.11'
   repositories {
@@ -8,7 +6,12 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.2.1'
+
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.17"
+
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
   }
 }
 
@@ -21,4 +24,8 @@ allprojects {
 
 task clean(type: Delete) {
   delete rootProject.buildDir
+}
+
+ext {
+  libraryVersion = '0.1.0'
 }
