--- a/interface/build.gradle
+++ b/interface/build.gradle
@@ -1,15 +1,22 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'maven-publish'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+apply from: '../publish.gradle'
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    api 'io.reactivex.rxjava2:rxjava:2.2.2'
+  api 'io.reactivex.rxjava2:rxjava:2.2.2'
 
-    implementation 'com.google.dagger:dagger:2.15'
-    kapt 'com.google.dagger:dagger-compiler:2.15'
+  implementation 'com.google.dagger:dagger:2.15'
+  kapt 'com.google.dagger:dagger-compiler:2.15'
 }
+
+apply from: 'publish.gradle'
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
