--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,20 @@ android {
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'com.android.support:appcompat-v7:28.0.0'
+
+  implementation project(':interface')
+  implementation project(':sso')
+
+  implementation 'androidx.core:core-ktx:1.0.1'
+  implementation 'androidx.fragment:fragment-ktx:1.0.0'
+  implementation 'androidx.appcompat:appcompat:1.0.2'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+
+  implementation 'com.google.android.material:material:1.0.0'
+
   testImplementation 'junit:junit:4.12'
+
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
