--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion 28
@@ -33,6 +34,9 @@ dependencies {
   implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
 
   implementation 'com.google.android.material:material:1.0.0'
+
+  implementation 'com.google.dagger:dagger:2.15'
+  kapt 'com.google.dagger:dagger-compiler:2.15'
 
   testImplementation 'junit:junit:4.12'
 
