--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
   implementation 'com.google.dagger:dagger:2.15'
   kapt 'com.google.dagger:dagger-compiler:2.15'
 
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
   testImplementation 'junit:junit:4.12'
 
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
