--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="drewhamilton.skylight.sample">
 
+  <uses-permission android:name="android.permission.INTERNET" />
+
   <application
       android:name=".SampleApplication"
       android:label="@string/app_name"
