--- a/views/build.gradle
+++ b/views/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+apply from: '../publish.gradle'
+apply from: 'publish.gradle'
 
 android {
   compileSdkVersion 28
