--- a/interface/build.gradle
+++ b/interface/build.gradle
@@ -12,6 +12,10 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
   api 'io.reactivex.rxjava2:rxjava:2.2.2'
+
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.mockito:mockito-inline:2.18.0'
+  testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
 }
 
 
