--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -3,21 +3,25 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation project(":interface")
+  implementation project(":interface")
 
-    api 'io.reactivex.rxjava2:rxjava:2.2.2'
+  api 'io.reactivex.rxjava2:rxjava:2.2.2'
 
-    api 'com.squareup.moshi:moshi:1.6.0'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.6.0'
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+  api 'com.squareup.moshi:moshi:1.6.0'
+  implementation 'com.squareup.moshi:moshi-kotlin:1.6.0'
+  api 'com.squareup.retrofit2:retrofit:2.4.0'
+  implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
+  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
-    implementation 'com.google.dagger:dagger:2.15'
-    kapt 'com.google.dagger:dagger-compiler:2.15'
+  implementation 'com.google.dagger:dagger:2.15'
+  kapt 'com.google.dagger:dagger-compiler:2.15'
+
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.mockito:mockito-inline:2.18.0'
+  testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
 }
 
 sourceCompatibility = "1.8"
