Test SkylightEventView extensions

--- a/views/build.gradle
+++ b/views/build.gradle
@@ -37,6 +37,8 @@ dependencies {
   implementation 'com.google.android.material:material:1.0.0'
 
   testImplementation 'junit:junit:4.12'
+  testImplementation 'org.mockito:mockito-inline:2.18.0'
+  testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
 
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
