--- a/views/publish.gradle
+++ b/views/publish.gradle
@@ -1,3 +1,5 @@
+apply from: '../publish.gradle'
+
 ext {
   bintrayName = 'Skylight-views'
   libraryName = 'Skylight views'
@@ -8,57 +10,13 @@ ext {
   packageType = "aar"
 }
 
-group = publishedGroupId
-version = libraryVersion
-def javadocDestinationDir = "$buildDir/docs/javadoc"
-
 install {
-  repositories.mavenInstaller {
-    pom.project {
-      packaging packageType
-      groupId publishedGroupId
-      artifactId artifact
-
-      name libraryName
-      description libraryDescription
-      url siteUrl
-
-      licenses {
-        license {
-          name licenseName
-          url licenseUrl
-        }
-      }
-      developers {
-        developer {
-          id developerId
-          name developerName
-          email developerEmail
-        }
-      }
-      scm {
-        connection gitUrl
-        developerConnection gitUrl
-        url siteUrl
-      }
-    }
-  }
+  installModule
 }
 
 task sourcesJar(type: Jar) {
   classifier = 'sources'
   from android.sourceSets.main.java.srcDirs
-}
-
-task dokkaJavadoc(type: dokka.class) {
-  outputFormat = 'javadoc'
-  outputDirectory = javadocDestinationDir
-  inputs.dir 'src/main/java'
-}
-
-task javadocJar(type: Jar, dependsOn: dokkaJavadoc) {
-  classifier = 'javadoc'
-  from javadocDestinationDir
 }
 
 artifacts {
