--- a/views/publish.gradle
+++ b/views/publish.gradle
@@ -11,7 +11,36 @@ ext {
 }
 
 install {
-  installModule
+  repositories.mavenInstaller {
+    pom.project {
+      packaging packageType
+      groupId publishedGroupId
+      artifactId artifact
+
+      name libraryName
+      description libraryDescription
+      url siteUrl
+
+      licenses {
+        license {
+          name licenseName
+          url licenseUrl
+        }
+      }
+      developers {
+        developer {
+          id developerId
+          name developerName
+          email developerEmail
+        }
+      }
+      scm {
+        connection gitUrl
+        developerConnection gitUrl
+        url siteUrl
+      }
+    }
+  }
 }
 
 task sourcesJar(type: Jar) {
