--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,20 @@
 language: android
 
+env:
+  matrix:
+    - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+
 android:
   components:
     - build-tools-28.0.3
-    - android-28
+    - $ANDROID_TARGET
+    - sys-img-$ANDROID_ABI-$ANDROID_TARGET
 
 jdk:
   - oraclejdk8
+
+before_script:
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
