--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 
 env:
   matrix:
-    - ANDROID_TARGET=android-28  ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET=android-28  ANDROID_ABI=x86
 
 android:
   components:
@@ -19,7 +19,7 @@ before_install:
   # Install the rest of tools (e.g., avdmanager)
   - sdkmanager tools
   # Install the system image
-  - sdkmanager "system-images;android-28;default;armeabi-v7a"
+  - sdkmanager "system-images;$ANDROID_TARGET;default;$ANDROID_ABI"
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;android-28;default;armeabi-v7a"
   - emulator -avd test -no-audio -no-window &
