--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 
 env:
   matrix:
-    - ANDROID_TARGET=android-28  ANDROID_ABI=x86
+    - ANDROID_TARGET=android-25  ANDROID_ABI=armeabi-v7a
 
 android:
   components:
