--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
   # Install the rest of tools (e.g., avdmanager)
   - sdkmanager tools
+  - sdkmanager --list
   # Install the system image
   - sdkmanager "system-images;$ANDROID_TARGET;default;$ANDROID_ABI"
   # Create and start emulator for the script. Meant to race the install task.
