--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - sdkmanager tools
   - sdkmanager --list
   # Install the system image
-  - sdkmanager "system-images;$ANDROID_TARGET;default;$ANDROID_ABI"
+  - sdkmanager "system-images;$ANDROID_TARGET;google_apis;$ANDROID_ABI"
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;$ANDROID_TARGET;default;$ANDROID_ABI"
   - emulator -avd test -no-audio -no-window &
