--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ before_install:
   - sdkmanager "system-images;$ANDROID_TARGET;google_apis;$ANDROID_ABI"
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;$ANDROID_TARGET;google_apis;$ANDROID_ABI"
-  - emulator -avd test -no-audio -no-window &
+  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
 
-install: ./gradlew clean assemble assembleAndroidTest --stacktrace
+install: ./gradlew clean assemble assembleDebugAndroidTest --stacktrace
 
 before_script:
   - android-wait-for-emulator
