--- a/interface/publish.gradle
+++ b/interface/publish.gradle
@@ -54,8 +54,8 @@ artifacts {
 }
 
 bintray {
-  user = hasProperty('personalBintrayUsername') ? personalBintrayUsername : System.getenv('personalBintrayUsername')
-  key = hasProperty('personalBintrayApiKey') ? personalBintrayApiKey : System.getenv('personalBintrayApiKey')
+  user = bintrayUser
+  key = bintrayKey
 
   configurations = ['archives']
   pkg {
