--- a/publish.gradle
+++ b/publish.gradle
@@ -16,6 +16,13 @@ ext {
   licenseName = 'The Apache Software License, Version 2.0'
   licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
   allLicenses = ["Apache-2.0"]
+
+  bintrayUser = project.hasProperty('personalBintrayUsername') ?
+      personalBintrayUsername :
+      System.getenv('personalBintrayUsername')
+  bintrayKey = project.hasProperty('personalBintrayApiKey') ?
+      personalBintrayApiKey :
+      System.getenv('personalBintrayApiKey')
 }
 
 group = publishedGroupId
