--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion 28
+
   defaultConfig {
     applicationId "drewhamilton.skylight.sample"
     minSdkVersion 16
@@ -13,11 +14,17 @@ android {
     versionName libraryVersion
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
+
   buildTypes {
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
 }
 
@@ -26,6 +33,7 @@ dependencies {
 
   implementation project(':interface')
   implementation project(':sso')
+  implementation project(':rx')
   implementation project(':views')
 
   implementation 'androidx.core:core-ktx:1.0.1'
