--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -7,15 +7,12 @@ apply from: 'publish.gradle'
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-  implementation project(":interface")
-
-  api "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+  api project(":interface")
 
   implementation 'com.squareup.moshi:moshi:1.8.0'
   implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
   implementation 'com.squareup.retrofit2:retrofit:2.5.0'
   implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
-  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
   implementation 'com.google.dagger:dagger:2.21'
   kapt 'com.google.dagger:dagger-compiler:2.21'
