--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  implementation project(':interface')
+  implementation project(':skylight')
   implementation project(':sso')
   implementation project(':rx')
   implementation project(':views')
