--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -5,15 +5,15 @@ apply plugin: 'kotlin-kapt'
 apply from: 'publish.gradle'
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    api project(':interface')
+  api project(':skylight')
 
-    api "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+  api "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-inline:2.23.0'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.mockito:mockito-inline:2.23.0'
+  testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
 }
 
 sourceCompatibility = "1.8"
