--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ dependencies {
 
   implementation 'com.google.android.material:material:1.0.0'
 
-  implementation 'com.google.dagger:dagger:2.21'
-  kapt 'com.google.dagger:dagger-compiler:2.21'
+  implementation "com.google.dagger:dagger:$daggerVersion"
+  kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
   implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
