--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -14,8 +14,8 @@ dependencies {
   implementation 'com.squareup.retrofit2:retrofit:2.5.0'
   implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
 
-  implementation 'com.google.dagger:dagger:2.21'
-  kapt 'com.google.dagger:dagger-compiler:2.21'
+  implementation "com.google.dagger:dagger:$daggerVersion"
+  kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
   testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   testImplementation 'junit:junit:4.12'
