--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -6,6 +6,7 @@ apply from: 'publish.gradle'
 
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
   api project(':skylight')
 
