--- a/skylight/build.gradle
+++ b/skylight/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 
   implementation "javax.inject:javax.inject:1"
 
+  testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.mockito:mockito-inline:2.23.0'
   testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
