--- a/dummy/build.gradle
+++ b/dummy/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     api project(':skylight')
+
+    testImplementation 'junit:junit:4.12'
 }
 
 sourceCompatibility = "1.8"
