--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
   testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   testImplementation 'junit:junit:4.12'
+  testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.1'
   testImplementation 'org.mockito:mockito-inline:2.23.0'
   testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
 }
