--- a/rx/publish.gradle
+++ b/rx/publish.gradle
@@ -44,7 +44,7 @@ install {
 }
 
 task sourcesJar(type: Jar) {
-  classifier = 'sources'
+  archiveClassifier = 'sources'
   from sourceSets.main.allSource
 }
 
