--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.0.1'
   implementation 'androidx.fragment:fragment-ktx:1.0.0'
   implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
 
-  implementation 'com.google.android.material:material:1.0.0'
+  implementation 'com.google.android.material:material:1.1.0-alpha06'
 
   implementation "com.google.dagger:dagger:$daggerVersion"
   kapt "com.google.dagger:dagger-compiler:$daggerVersion"
