--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,19 +29,25 @@ android {
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
   implementation project(':skylight')
   implementation project(':sso')
+  implementation project(':dummy')
+  implementation project(':calculator')
   implementation project(':rx')
   implementation project(':views')
 
-  implementation 'androidx.core:core-ktx:1.0.1'
+  implementation 'androidx.core:core-ktx:1.0.2'
   implementation 'androidx.fragment:fragment-ktx:1.0.0'
   implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
 
   implementation 'com.google.android.material:material:1.1.0-alpha06'
+
+  implementation 'drewhamilton.rxpreferences:rxpreferences:1.0.0-beta2'
+  implementation 'drewhamilton.rxpreferences:rxpreferences-ktx:1.0.0-beta2'
+  implementation 'drewhamilton.rxpreferences:rxpreferences-dagger:1.0.0-beta2'
 
   implementation "com.google.dagger:dagger:$daggerVersion"
   kapt "com.google.dagger:dagger-compiler:$daggerVersion"
