--- a/views/build.gradle
+++ b/views/build.gradle
@@ -29,9 +29,9 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
   implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
 
-  implementation 'com.google.android.material:material:1.1.0-alpha05'
+  implementation 'com.google.android.material:material:1.1.0-alpha06'
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.mockito:mockito-inline:2.23.0'
