--- a/skylight/build.gradle
+++ b/skylight/build.gradle
@@ -7,6 +7,8 @@ apply from: 'publish.gradle'
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+  implementation 'org.threeten:threetenbp:1.4.0'
+
   implementation "javax.inject:javax.inject:1"
 
   testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
