Organize settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':app', ':skylight', ':sso', ':views', ':rx', ':dummy', ':calculator'
+include ':skylight'
+include ':sso', ':calculator', ':dummy'
+include ':rx'
+include ':views'
+include ':app'
