--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -13,12 +13,12 @@ dependencies {
 
   // Backport interface is compileOnly so consumers who don't need it don't have it. Consumers who do need it can
   // declare it manually.
-  compileOnly project(':skylight-backport')
+  compileOnly project(':skylight:backport')
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.mockito:mockito-inline:2.27.0'
   testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
-  testImplementation project(':skylight-backport')
+  testImplementation project(':skylight:backport')
   testImplementation 'org.threeten:threetenbp:1.4.0'
 }
 
