--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
   // Backport interface is compileOnly so consumers who don't need it don't have it. Consumers who do need it can
   // declare it manually.
-  compileOnly project(':skylight-backport')
+  compileOnly project(':skylight:backport')
 
   implementation "com.google.dagger:dagger:$daggerVersion"
   kapt "com.google.dagger:dagger-compiler:$daggerVersion"
@@ -30,7 +30,7 @@ dependencies {
   testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.1'
   testImplementation 'org.mockito:mockito-inline:2.27.0'
   testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
-  testImplementation project(':skylight-backport')
+  testImplementation project(':skylight:backport')
 }
 
 sourceCompatibility = "1.8"
