--- a/dummy-backport/build.gradle
+++ b/dummy-backport/build.gradle
@@ -2,17 +2,18 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
-apply from: 'publish.gradle'
+//apply from: 'publish.gradle'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    api project(':skylight')
+    api project(':skylight-backport')
 
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation project(':skylight-backport')
 }
 
 sourceCompatibility = "1.8"
