Add :calculator-backport and move common files into common src directory

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
   implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
   implementation project(':sso')
-  implementation project(':calculator')
+  implementation project(':calculator-backport')
   implementation project(':dummy-backport')
   implementation project(':rx')
 
