--- a/calculator-backport/build.gradle
+++ b/calculator-backport/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
-apply from: 'publish.gradle'
+//apply from: 'publish.gradle'
 
 sourceSets.main.java.srcDirs += '../calculator-common/src/main/java'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    api project(':skylight')
+    api project(':skylight-backport')
 
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
