Move :sso backports to :sso-backport
Compilation is failing for new source set in backports

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
   implementation project(':skylight-backport')
   implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
-  implementation project(':sso')
+  implementation project(':sso-backport')
   implementation project(':calculator-backport')
   implementation project(':dummy-backport')
   implementation project(':rx')
