--- a/sso-backport/build.gradle
+++ b/sso-backport/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
-apply from: 'publish.gradle'
+//apply from: 'publish.gradle'
 
 sourceSets.main.java.srcDirs += '../sso-common/src/main/java'
 
@@ -10,7 +10,7 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-  api project(':skylight')
+  api project(':skylight-backport')
 
   def moshiVersion = '1.8.0'
   implementation "com.squareup.moshi:moshi:$moshiVersion"
