Add :rx-backport module

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,6 @@ include ':skylight', ':skylight-backport'
 include ':sso', ':sso-backport'
 include ':calculator', ':calculator-backport'
 include ':dummy', ':dummy-backport'
-include ':rx'
+include ':rx', ':rx-backport'
 include ':views'
 include ':app'
