--- a/skylight-backport/publish.gradle
+++ b/skylight-backport/publish.gradle
@@ -1,16 +1,16 @@
 apply from: '../publish.gradle'
 
 ext {
-  bintrayName = 'Skylight-views'
-  libraryName = 'Skylight views'
-  artifact = 'skylight-views'
+  bintrayName = 'SkylightBackport'
+  libraryName = 'Skylight'
+  artifact = 'skylight'
 
-  libraryDescription = 'Custom Android views that may be useful in displaying Skylight information.'
+  libraryDescription = 'An Java 6-compatible interface for determining sunrise, sunset, and related info for a given location.'
 
-  packageType = "aar"
+  packageType = "jar"
 }
 
-group = publishedGroupId
+group = publishedBackportGroupId
 
 install {
   repositories.mavenInstaller {
@@ -47,7 +47,7 @@ install {
 
 task sourcesJar(type: Jar) {
   archiveClassifier = 'sources'
-  from android.sourceSets.main.java.srcDirs
+  from sourceSets.main.allSource
 }
 
 artifacts {
