--- a/calculator-backport/build.gradle
+++ b/calculator-backport/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
-//apply from: 'publish.gradle'
+apply from: 'publish.gradle'
 
 sourceSets.main.java.srcDirs += '../calculator-common/src/main/java'
 
