--- a/skylight-backport/publish.gradle
+++ b/skylight-backport/publish.gradle
@@ -3,7 +3,7 @@ apply from: '../publish.gradle'
 ext {
   bintrayName = 'SkylightBackport'
   libraryName = 'Skylight'
-  artifact = 'skylight'
+  artifact = 'skylight-backport'
 
   libraryDescription = 'An Java 6-compatible interface for determining sunrise, sunset, and related info for a given location.'
 
