--- a/sso-backport/publish.gradle
+++ b/sso-backport/publish.gradle
@@ -3,7 +3,7 @@ apply from: '../publish.gradle'
 ext {
   bintrayName = 'SkylightBackport-sso'
   libraryName = 'Skylight: sunrise-sunset.org'
-  artifact = 'skylight-sso'
+  artifact = 'skylight-backport-sso'
 
   libraryDescription = 'A Java 6-compatible Skylight implementation that uses sunrise-sunset.org to retrieve Skylight information.'
 
