--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="drewhamilton.skylight.sample">
 
-  <uses-permission android:name="android.permission.INTERNET" />
-
   <application
-      android:name=".SampleApplication"
-      android:label="@string/app_name"
+      android:label="Skylight demo (deprecated)"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
-      android:theme="@style/AppTheme"
+      android:theme="@style/Theme.AppCompat.NoActionBar"
       android:allowBackup="false"
       android:supportsRtl="true"
-      tools:ignore="GoogleAppIndexingWarning"
-      tools:replace="android:theme">
+      tools:ignore="GoogleAppIndexingWarning">
 
     <activity android:name=".main.MainActivity">
       <intent-filter>
@@ -22,8 +18,6 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-
-    <activity android:name=".settings.SettingsActivity" />
 
   </application>
 
