Ignore .idea/modules.xml
It should be ignored so others can import the project

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ gen-external-apklibs
 .idea/tasks.xml
 .idea/dictionaries
 .idea/shelf
+.idea/modules.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
