Remove :calculator-backport

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include ':skylight', ':skylight-backport'
 include ':sso'
-include ':calculator', ':calculator-backport'
+include ':calculator'
 include ':dummy', ':dummy-backport'
 include ':rx', ':rx-backport'
 include ':app'
