Remove :dummy-backport, :rx-backport, and :skylight-backport

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,4 @@
-include ':skylight', ':skylight-backport'
-include ':sso'
-include ':calculator'
-include ':dummy', ':dummy-backport'
-include ':rx', ':rx-backport'
+include ':skylight'
+include ':calculator', ':dummy', ':sso'
+include ':rx'
 include ':app'
