--- a/dummy/build.gradle
+++ b/dummy/build.gradle
@@ -2,8 +2,19 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
-ext.artifact = 'skylight-dummy'
-apply from: 'publish.gradle'
+ext {
+    artifact = 'skylight-dummy'
+    bintrayName = 'Skylight-dummy'
+    libraryName = 'Skylight Dummy'
+
+    libraryDescription = 'A dummy implementation of Skylight that always returns the same skylight events.'
+
+    compatibility = [
+        ignoreMissingClasses: false,
+        excludedModules: []
+    ]
+}
+apply from: '../gradle/publish.gradle'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
