--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.japicmp_version = '0.2.8'
     repositories {
         google()
         gradlePluginPortal()
@@ -11,7 +12,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.18"
 
-        classpath 'me.champeau.gradle:japicmp-gradle-plugin:0.2.8'
+        classpath "me.champeau.gradle:japicmp-gradle-plugin:$japicmp_version"
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
