--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    repositories {
-        mavenCentral()
-        // TODO: Remove when publishing to Maven Central
-        jcenter()
-    }
+    ext.versions = [
+        dagger: '2.27',
+        kotlin: '1.3.72'
+    ]
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
         classpath 'org.jetbrains.dokka:dokka-gradle-plugin:0.10.1'
         classpath 'org.jetbrains.kotlinx:binary-compatibility-validator:0.2.3'
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+    }
+    repositories {
+        mavenCentral()
+        // TODO: Remove when publishing to Maven Central
+        jcenter()
     }
 }
 
@@ -29,6 +32,4 @@ task clean(type: Delete) {
 
 ext {
     libraryVersion = '0.11.0'
-
-    daggerVersion = '2.24'
 }
