--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -19,8 +19,8 @@ ext {
 apply from: '../gradle/publish.gradle'
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
+  implementation "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
 
   api project(':skylight')
 
@@ -32,11 +32,11 @@ dependencies {
   implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
   implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 
-  implementation "com.google.dagger:dagger:$daggerVersion"
-  kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+  implementation "com.google.dagger:dagger:$versions.dagger"
+  kapt "com.google.dagger:dagger-compiler:$versions.dagger"
 
   testImplementation 'junit:junit:4.12'
-  testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+  testImplementation "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
   testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.1'
   testImplementation 'org.mockito:mockito-inline:2.28.2'
   testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
