--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,17 @@
 buildscript {
     ext.versions = [
         dagger: '2.27',
-        kotlin: '1.3.72'
+        kotlin: '1.3.72',
+    ]
+    ext.deps = [
+        dagger: "com.google.dagger:dagger:$versions.dagger",
+        daggerCompiler: "com.google.dagger:dagger-compiler:$versions.dagger",
+        javaxInject: 'javax.inject:javax.inject:1',
+        junit: "junit:junit:4.13",
+        kotlinReflect: "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin",
+        kotlinStdLib: "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
+        mockito: 'org.mockito:mockito-inline:2.28.2',
+        mockitoKotlin: 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0',
     ]
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
