--- a/skylight/build.gradle
+++ b/skylight/build.gradle
@@ -12,15 +12,14 @@ ext {
 apply from: '../gradle/publish.gradle'
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
+    implementation deps.javaxInject
+    implementation deps.kotlinStdLib
 
-    implementation "javax.inject:javax.inject:1"
-
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-inline:2.28.2'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    testImplementation deps.kotlinReflect
+    testImplementation deps.junit
+    testImplementation deps.mockito
+    testImplementation deps.mockitoKotlin
 }
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
