--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -12,8 +12,8 @@ ext {
 apply from: '../gradle/publish.gradle'
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
-  implementation "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
+  implementation deps.kotlinStdLib
+  implementation deps.kotlinReflect
 
   api project(':skylight')
 
@@ -25,14 +25,14 @@ dependencies {
   implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
   implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 
-  implementation "com.google.dagger:dagger:$versions.dagger"
-  kapt "com.google.dagger:dagger-compiler:$versions.dagger"
+  implementation deps.dagger
+  kapt deps.daggerCompiler
 
-  testImplementation 'junit:junit:4.12'
-  testImplementation "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
+  testImplementation deps.junit
+  testImplementation deps.kotlinReflect
   testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.1'
-  testImplementation 'org.mockito:mockito-inline:2.28.2'
-  testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+  testImplementation deps.mockito
+  testImplementation deps.mockitoKotlin
 }
 
 sourceCompatibility = '1.8'
