--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         kotlinStdLib: "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
         mockito: 'org.mockito:mockito-inline:2.28.2',
         mockitoKotlin: 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0',
+        moshi: 'com.squareup.moshi:moshi-kotlin:1.9.2',
     ]
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
