--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext.versions = [
         dagger: '2.27',
         kotlin: '1.3.72',
+        retrofit: '2.8.1',
     ]
     ext.deps = [
         dagger: "com.google.dagger:dagger:$versions.dagger",
@@ -13,6 +14,9 @@ buildscript {
         mockito: 'org.mockito:mockito-inline:2.28.2',
         mockitoKotlin: 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0',
         moshi: 'com.squareup.moshi:moshi-kotlin:1.9.2',
+        okHttpMockWebServer: 'com.squareup.okhttp3:mockwebserver:3.14.8',
+        retrofit: "com.squareup.retrofit2:retrofit:$versions.retrofit",
+        retrofitMoshiConverter: "com.squareup.retrofit2:converter-moshi:$versions.retrofit",
     ]
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
